src/test/ui/error-codes/E0118-2.rs
struct Foo;

impl &mut Foo {
    //~^ ERROR E0118
    fn bar(self) {}
}

fn main() {}
